switch to using ar-auth

--- a/public/index.html
+++ b/public/index.html
@@ -13,4 +13,6 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/aes.js"></script>
+
 </html>
